--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -14,12 +14,12 @@
           </ul>
           <p>{{ post.text }}</p>
           {% if post.group %}
-             <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
+             <a href="{% url 'posts:group_list' post.group.slug %}"
+             >все записи группы</a>
           {% endif %}
           {% if not forloop.last %}<hr>{% endif %}
         {% endfor %}
        </p>
         </article>
-        <!-- под последним постом нет линии -->
       </div>
   {% endblock %}
