--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,15 +1,16 @@
 {% extends 'base.html' %}
 {% block title %} Записи сообщества {{ group }}{% endblock %}
 {% block content %}
-<!-- класс py-5 создает отступы сверху и снизу блока -->
-  <div class="container">
-    <h1>{{ group }}</h1>
-    <p>
-      {{ group.description }}
-    </p>
-    {% for post in page_obj %}
-      {% include 'includes/post_body.html' %}
-      {% if not forloop.last %}<hr>{% endif%}
-    {% endfor %}
-  </div>
+    <div class="container py-5">
+        {% for post in posts %}
+        {% if post.group.get_full_name == group.title %}
+            <h3>
+                Автор: {{ post.author.get_full_name }}
+                Дата публикации: {{ post.pub_date|date:"d M Y" }}
+            </h3>
+            <p>{{ post.text|linebreaksbr }}</p>
+        {% if not forloop.last %}<hr>{% endif %}
+        {% endif %}
+        {% endfor %}
+    </div>
 {% endblock %}
