--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -1,27 +1,31 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-      {% load static %}
-    <link rel="icon" href="{% static 'img/fav/favicon.ico' %}" type="image">
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/fav/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/fav/favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/fav/favicon-16x16.png' %}">
+    <link rel="icon" href="img/fav/fav.ico" type="image">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/fav/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/fav/favicon-16x16.png">
     <meta name="msapplication-TileColor" content="#000">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
-    <title>Последние обновления на сайте</title>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <title>
+      {% block title %}Заголовок страницы отсутствует{% endblock %}
+    </title>
   </head>
   <body>
     <header>
-        {% include 'posts/includes/header.html' %}
+      {% include 'includes/header.html' %}
     </header>
     <main>
-        {% block content%}
-        {% endblock %}
+      {% block content %}
+          Контент отсутствует
+      {% endblock %}
     </main>
     <footer class="border-top text-center py-3">
-        {% include 'posts/includes/footer.html' %}
+      {% include 'includes/footer.html' %}
     </footer>
   </body>
+</html>
